wip: default value for radius property.

--- a/AvaloniaApp/Slice.axaml
+++ b/AvaloniaApp/Slice.axaml
@@ -4,7 +4,6 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              mc:Ignorable="d" d:DesignWidth="800" d:DesignHeight="450"
-			 x:CompileBindings="True"
              x:Class="AvaloniaApp.Slice">
 	<Grid>
 		<Grid x:Name="uxGrid">
@@ -12,7 +11,7 @@
 		</Grid>
 		<Path PointerReleased="Path_PointerReleased" x:Name="Default" Stroke="Black" StrokeThickness="0" Fill="Tan" Opacity="1">
 			<Path.Data>
-				<EllipseGeometry RadiusX="50" RadiusY="50" />
+				<EllipseGeometry RadiusX="{Binding Radius, DataType={x:Type local:Slice}}" RadiusY="{Binding Radius, DataType={x:Type local:Slice}}" />
 			</Path.Data>
 		</Path>
 	</Grid>
